k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agromarket
  labels:
    app: agromarket
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: agromarket
  template:
    metadata:
      labels:
        app: agromarket
    spec:
      serviceAccountName: agromarket-sa
      containers:
        - name: agromarket
          image: deydev28/agromarket:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - name: uploads-storage
              mountPath: /home/appuser/uploads
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: agromarket-uploads-pvc
