k8s/mysql-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: agromarket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      serviceAccountName: agromarket-sa
      automountServiceAccountToken: false
      containers:
      - name: mysql
        image: mysql:8.4
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
            ephemeral-storage: "2Gi"
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: agromarket
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
