k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agromarket-service
spec:
  selector:
    app: agromarket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
