k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agromarket-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: agromarket.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agromarket-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agromarket-frontend-service
                port:
                  number: 80
